src/scss/_layout.scss
// =============================================
// Grid
// =============================================

.grid {
    display: flex;
    flex-flow: wrap;

    > * {
        width: 100%;

        @media(min-width: $screen-sm) {
            width: 50%;
        }
    }
}

@media(min-width: $screen-md) {
    .g-four-up > * {
        width: 25%;
    }
}


// =============================================
// Center grid
// =============================================

.g-center {
    align-items: center;
}


// =============================================
// Flex grid
// =============================================

.g-flex > * {
    display: flex;
    flex-flow: column;

    > * {
        flex-grow: 1;
    }
}


// =============================================
// Limit width
// =============================================

.g-limit > * {
    max-width: $screen-sm;
}


// =============================================
// Gutter
// =============================================

%g-gutter-x,
.g-gutter-x {
    margin-left: -2vw;
    margin-right: -2vw;

    > * {
        padding-left: 2vw;
        padding-right: 2vw;
    }
}

.g-gutter {
    @extend %g-gutter-x;

    > * {
        margin-bottom: 4vw;
    }
}


// =============================================
// Flag
// =============================================

.flag {
    display: flex;

    > *:first-child {
        flex-grow: 1;
        width: auto;
    }

    > *:last-child {
        flex-shrink: 1;
    }
}

